test/runnable/extra-files/lib13774a.d
module lib13774a;

void comdef()()
{
    __gshared int a;
}

void use1()
{
    comdef();
}
