test/fail_compilation/fail112.d
void func(int a) { }
//typedef int ft(int);

typeof(func) test() {
}
